--- a/block-BJaaay/code/index.html
+++ b/block-BJaaay/code/index.html
@@ -7,7 +7,7 @@
   </head>
 
   <body>
-    <h1>Using Loops</h1>
+    <h1>Using Loops and other stuff</h1>
     <script src="./index.js"></script>
   </body>
 </html>
